--- a/src/main/resources/templates/common/commonFoot.html
+++ b/src/main/resources/templates/common/commonFoot.html
@@ -3,6 +3,8 @@
 <div th:fragment="foot(scripts)">
     <!-- 引入jquery插件JS -->
     <script th:src="@{/webjars/jquery/jquery.min.js}" ></script>
+    <!-- 引入jquery form插件JS -->
+    <script th:src="@{/webjars/jquery-form/jquery.form.min.js}" ></script>
     <!-- 引入bootstrap插件样式 JS-->
     <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
     <!-- 消息提醒框JS -->
