--- a/src/main/resources/templates/user/userAdd.html
+++ b/src/main/resources/templates/user/userAdd.html
@@ -12,11 +12,13 @@
     <div th:replace="common/commonFoot::foot(~{::script})">
         <script th:src="@{/webjars/bootstrapvalidator/js/bootstrapValidator.min.js}"></script>
         <script th:src="@{/webjars/bootstrap-datepicker/js/bootstrap-datepicker.min.js}"></script>
+        <script th:src="@{/webjars/jquery-validation/jquery.validate.min.js}"></script>
         <script th:src="@{/webjars/bootstrap-datepicker/locales/bootstrap-datepicker.zh-CN.min.js}"></script>
+        <script th:src="@{/js/common.js}"></script>
         <script th:src="@{/js/user.js}"></script>
     </div>
     <div class="container-fluid panel-body">
-        <form id="userForm" class="form-horizontal validation-form" action="#" method="post">
+        <form id="userForm" class="form-horizontal validation-form" action="/user/save" method="post">
             <input type="hidden" name="userId" id="userId" th:value="${user.userId}">
             <input type="hidden" name="flag" id="flag" th:value="${readOnly}">
             <input type="hidden" name="createDate" id="createDate" th:value="${#dates.format(user.createDate, 'yyyy-MM-dd HH:mm:ss')}">
@@ -67,19 +69,23 @@
                 </div>
                 <div class="form-inline">
                     <label class="col-sm-2 control-label"style="white-space:nowrap">部门</label>
-                    <div class="col-sm-10">
-                        <input type="hidden" id="deptId" name="deptId">
+                    <div class="col-sm-9">
+                        <label th:each="dept:${deptList}" class="checkbox-inline">
+                            <input type="hidden" id="deptId" name="deptId" th:value="${dept.deptId}">
+                        </label>
                         <input type="text" class="form-control" id="deptName" name="deptName"
                                readonly="true"  placeholder="请选择部门">
-                        <a href="javascript:void(0)" onclick="queryDept()" th:readonly="${readOnly}" >
-                            <span class="glyphicon glyphicon-search"></span>
-                        </a>
+                        <p class="form-inline text-left">
+                            <a href="javascript:void(0)" onclick="queryDept()" th:readonly="${readOnly}" >
+                                <span class="glyphicon glyphicon-search"></span>
+                            </a>
+                        </p>
                     </div>
                 </div>
                 <div class="form-inline">
                     <label class="col-sm-2 control-label"style="white-space:nowrap">角色</label>
                     <div class="col-sm-10">
-                        <label th:each="role:${roles}" class="checkbox-inline">
+                        <label th:each="role:${roles}" class="text-left">
                             <input name="role" type="checkbox" th:value="${role.roleId}"
                                    th:text="${role.roleName}">
                         </label>
