--- a/src/main/resources/templates/common/commonHeader.html
+++ b/src/main/resources/templates/common/commonHeader.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/fontawesome.min.css}"></link>
     <!-- 引入bootstrap插件样式 -->
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+    <!-- 引入bootstrap验证插件样式 -->
+    <link rel="stylesheet" th:href="@{/webjars/bootstrapvalidator/css/bootstrapValidator.min.css}"/>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap-glyphicons/css/bootstrap-glyphicons.css}"/>
     <!-- 消息提醒框样式 -->
     <link rel="stylesheet" th:href="@{/webjars/toastr/build/toastr.min.css}"/>
     <!--/* Per-page placeholder for additional links */-->
