--- a/src/main/resources/templates/dept/deptAdd.html
+++ b/src/main/resources/templates/dept/deptAdd.html
@@ -1,54 +1,43 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>部门管理</title>
-    <!-- 引入font-awesome icons CSS  -->
-    <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/fontawesome.min.css}"></link>
-    <!-- 引入bootstrap插件样式 -->
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" th:href="@{/webjars/bootstrapvalidator/css/bootstrapvalidator.min.css}"/>
+<!--引用通用head--->
+<head th:replace="common/commonHeader::common_header(~{::title},~{::link},~{})">
+    <title>部门信息</title>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrapvalidator/css/bootstrapValidator.min.css}"/>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap-glyphicons/css/bootstrap-glyphicons.css}"/>
-    <script th:src="@{/webjars/jquery/jquery.min.js}" ></script>
-    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-    <script th:src="@{/webjars/bootstrapvalidator/js/bootstrapvalidator.min.js}"></script>
-    <script th:src="@{/js/dept.js}"></script>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap-datepicker/css/bootstrap-datepicker3.css}"/>
 </head>
 <body>
+<!--引用通用JS-->
+<div th:replace="common/commonFoot::foot(~{::script})">
+    <script th:src="@{/webjars/bootstrapvalidator/js/bootstrapValidator.min.js}"></script>
+    <script th:src="@{/webjars/jquery-validation/jquery.validate.min.js}"></script>
+    <script th:src="@{/js/dept.js}"></script>
+</div>
 <div class="container-fluid panel-body">
-    <form id="deptForm" class="form-horizontal validation-form" action="/dept/add" method="post">
-        <input type="hidden" name="deptId" id="deptId">
-        <input type="hidden" name="parentId" id="parentId">
-        <input type="hidden" name="createDate" id="createDate">
-        <input type="hidden" name="updateDate" id="updateDate">
-        <input type="hidden" name="delFlag" id="delFlag">
+    <form id="deptForm" class="form-horizontal validation-form" action="/dept/save" method="post">
+        <input type="hidden" name="deptId" id="deptId" th:value="${dept.deptId}">
+        <input type="hidden" name="parentId" id="parentId" th:value="${dept.parentId}">
+        <input type="hidden" name="createDate" id="createDate" th:value="${#dates.format(dept.createDate, 'yyyy-MM-dd HH:mm:ss')}">
+        <input type="hidden" name="updateDate" id="updateDate" th:value="${#dates.format(dept.updateDate, 'yyyy-MM-dd HH:mm:ss')}" >
+        <input type="hidden" name="delFlag" id="delFlag" th:value="${dept.delFlag}">
         <div class="panel-body">
             <div class="form-group">
                 <label for="deptCode" class="col-sm-2 control-label"style="white-space:nowrap">部门编码</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="deptCode" name="deptCode" placeholder="请输入部门编码">
+                    <input type="text" class="form-control" id="deptCode" name="deptCode" th:value="${dept.deptCode}" placeholder="请输入部门编码">
                 </div>
             </div>
             <div class="form-group">
                 <label for="deptName" class="col-sm-2 control-label"style="white-space:nowrap">部门名称</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="deptName" name="deptName" placeholder="请输入部门名称">
+                    <input type="text" class="form-control" id="deptName" name="deptName" th:value="${dept.deptName}" placeholder="请输入部门名称">
                 </div>
             </div>
             <div class="form-group">
                 <label for="deptSort" class="col-sm-2 control-label"style="white-space:nowrap">部门排序</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="deptSort" name="deptSort" placeholder="请输入部门排序">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="remarks" class="col-sm-2 control-label"style="white-space:nowrap">备注</label>
-                <div class="col-sm-10">
-                        <textarea class="form-control" id="remarks" name="remarks" placeholder="请输入备注" rows="3">
-                        </textarea>
+                    <input type="text" class="form-control" id="deptSort" name="deptSort" th:value="${dept.deptSort}" placeholder="请输入部门排序">
                 </div>
             </div>
         </div>
