--- a/src/main/resources/templates/dept/deptTreeTableList.html
+++ b/src/main/resources/templates/dept/deptTreeTableList.html
@@ -3,15 +3,15 @@
 <!--引用通用head--->
 <head th:replace="common/commonHeader::common_header(~{::title},~{::link},~{})">
     <title>部门列表</title>
-    <link rel="stylesheet" th:href="@{/webjars/zTree/css/zTreeStyle/zTreeStyle.css}"/>
+    <link rel="stylesheet" th:href="@{/webjars/layui/css/layui.css}"/>
+    <link rel="stylesheet" th:href="@{/css/layuiTreeTable.css}"/>
 </head>
 <body>
 <!--引用通用JS-->
 <div th:replace="common/commonFoot::foot(~{::script})">
     <script th:src="@{/webjars/jquery-validation/jquery.validate.min.js}"></script>
-    <script th:src="@{/webjars/zTree/js/jquery.ztree.all.js}"></script>
+    <script th:src="@{/webjars/layui/layui.all.js}"></script>
     <script th:src="@{/js/common.js}" ></script>
-    <script th:src="@{/js/zTreeCommon.js}" ></script>
 </div>
 <div class="wrapper wrapper-content ">
     <div class="panel-heading">
@@ -36,9 +36,7 @@
                     <div>
                         搜索：<input type="text" id="deptName" class="empty" style="width: 80px;margin-left: 3px;font-weight: normal;" placeholder="请输入部门名称"/>
                     </div>
-                    <ul id="dataTree" class="ztree">
-
-                    </ul>
+                    <table id="deptTable" class="layui-table" lay-filter="deptTable"></table>
                 </div>
             </div>
         </div>
@@ -48,96 +46,82 @@
 </div>
 
 <script type="text/javascript">
+
+    layui.config({
+        base:"/js/"
+    }).extend({
+        treetable:"treetable"
+    });
     // 第三步初始化Datatables
     $(function() {
-        initDept();
-    });
-    //设置
-    var setting={
-        check: {
-            enable: true,
-            autoCheckTrigger: true,   //true / false 分别表示 触发 / 不触发 事件回调函数
-            chkStyle: "checkbox",
-            chkboxType: { "Y": "p", "N": "s" }   //勾选 checkbox 对于父子节点的关联关系
-        },
-        view:{
-            showLine: true,
-            showIcon: false
-        },
-        data: {
-            simpleData: {
-                enable: true
-            }
-        },
-        callback: {
-            onClick:"",
-            beforeCheck: beforeCheckParam,
-            onCheck: onCheckParam
-        }
-    }
+        layui.use(["layer","table","treetable"],function () {
+            var $ = layui.jquery;
+            var table = layui.table;
+            var layer = layui.layer;
+            var treetable = layui.treetable;
+            // 渲染表格
+            var renderTable= function () {
+                // layer.load(2);
+                // 渲染表格
+                $.ajax({
+                    url: "/dept/list",
+                    type: "post",
+                    data: {},
+                    dataType: "json",
+                    success: function (data) {
+                        treetable.render({
+                            treeColIndex: 1,
+                            treeSpid: -1,
+                            treeIdName: 'deptId',
+                            treePidName: 'parentId',
+                            treeDefaultClose: true,
+                            treeLinkage: false,
+                            elem: '#deptTable',
+                            data: eval(data),
+                            page: false,
+                            cols: [
+                                [
+                                    // {type: 'numbers', title: '编号'},
+                                    {type:'checkbox'},
+                                    {field: 'deptId', title: '部门ID'},
+                                    {field: 'deptName', title: '部门名称'},
+                                    {field: 'deptCode', title: '部门编码'},
+                                    {field: 'deptSort', title: '部门排序'}
+                                    //{templet: 'complain', title: '操作'}
+                                ]
+                            ],
+                            done: function () {
+                                layer.closeAll('loading');
+                            }
+                        });
 
-    function beforeCheckParam(treeId, treeNode) {
-        if (treeNode.isParent) {
-            toastr.warning("请选择子节点！",0);
-            return false;
-        }
-    }
-    //获取选中的节点
-    function onCheckParam(e, treeId, treeNode) {
-        var treeObj=$.fn.zTree.getZTreeObj("dataTree"),
-            nodes=treeObj.getCheckedNodes(true),
-            v="";
-        for(var i=0;i<nodes.length;i++){
-            v+=nodes[i].name + ",";
-        }
-        var id_close = '';
-        for(var i=0;i<nodes.length;i++){
-            //判断是不是根节点
-            if(nodes[i].pId == null){
-                //判断根节点有没有下级了，没有下级，需要选中跟节点
-                if(nodes[i].children == undefined){
-                    id_close = id_close + ',' + nodes[i].id;
-                }
-            }else{
-                id_close = id_close + ',' + nodes[i].id
-            }
-        }
-        return id_close;
-    }
-    //ajax调用初始化方法
-    function initDept(){
-        $.ajax({
-            url: "/dept/list",
-            type: "post",
-            data: {},
-            dataType: "json",
-            success: function (data) {
-                var zNodes=[];
-                var datas=eval(data);
-                datas.forEach(function(dept){
-                    var node=new Object();
-                    node.id=dept.deptId;
-                    node.pId=dept.parentId;
-                    node.name=dept.deptName;
-                    zNodes.push(node);
+                    },
+                    error: function (msg) {
+
+                    }
                 });
-                //初始化tree树
-                var zTree = $.fn.zTree.init($("#dataTree"), setting,  zNodes);
-                zTreeAutoMatch('dataTree','#deptName',null,true); //初始化模糊搜索方法
-                zTree.expandAll(true);   //true 节点全部展开、false节点收缩
-            },
-            error: function (msg) {
-
-            }
+            };
+            renderTable();
         });
+    });
+    //
+    function complain(d) {
+        if(d.deptId!=null){
+            return [
+                '<a class="operation" lay-event="edit" href="javascript:void(0)" onclick="del(\''+ d + '\')" title="编辑">',
+                '<i class="layui-icon layui-icon-edit"></i></a>',
+                '<a class="operation" lay-event="" href="javascript:void(0)" onclick="del(\''+ d + '\')" title="删除">',
+                '<i class="layui-icon layui-icon-delete" ></i></a>',
+            ].join('');
+        }else{
+            return '';
+        }
     }
-
 
 
     //批量删除
     function batchDelete(){
-        var treeObj=$.fn.zTree.getZTreeObj("dataTree");
-        var rows=treeObj.getCheckedNodes(true);
+        var rows=[]
         if (rows.length == 0) {
             toastr.warning("请选择要删除的数据");
             return;
