--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,223 +1,327 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-	<title>用户信息</title>
-	<!--less CSS 预处理语言-->
-<!--	<link rel="stylesheet/less" type="text/css" href="styles.less" />-->
-<!--	<script src="/webjars/less/less.js" type="text/javascript"></script>-->
-	<!-- 引入font-awesome icons CSS  -->
-	<link rel="stylesheet" th:href="@{/webjars/font-awesome/css/fontawesome.min.css}"></link>
+<!--引用通用head--->
+<head th:replace="common/commonHeader::common_header(~{::title},~{::link},~{})">
+	<title>首页</title>
+	<!-- 引入bootstrap插件样式 -->
+	<link rel="stylesheet" th:href="@{/webjars/animate.css/animate.min.css}"/>
 	<link rel="stylesheet" th:href="@{/css/custom.css}"></link>
 	<link rel="stylesheet" th:href="@{/css/style.css}"></link>
 	<link rel="stylesheet" th:href="@{/css/SidebarNav.min.css}"></link>
-	<!-- 引入bootstrap插件样式 -->
-	<link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
-	<script th:src="@{/webjars/jquery/jquery.min.js}" ></script>
-	<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-
 </head>
-<body class="cbp-spmenu-push">
-<div class="main-content">
-	<div class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
-		<!--左侧树形菜单-fixed -navigation-->
-		<aside class="sidebar-left">
-			<nav class="navbar navbar-inverse">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".collapse" aria-expanded="false">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<h1><span class="fa fa-area-chart"></span> Finesys</h1>
-				</div>
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="sidebar-menu">
+<body class="fixed-sidebar full-height-layout  gray-bg">
+<!--引用通用JS-->
+<div th:replace="common/commonFoot::foot(~{::script})">
+	<script th:src="@{/webjars/metisMenu/metisMenu.min.js}"></script>
+	<script th:src="@{/js/contabs.js}"></script>
+	<script th:src="@{/js/index.js}"></script>
+</div>
+<div class="wrapper">
+	<!--左侧导航开始-->
+	<nav class="navbar-default navbar-static-side" role="navigation">
+		<div class="nav-close">
+			<i class="fa fa-times-circle"></i>
+		</div>
+		<div class="sidebar-collapse">
+			<ul class="nav" id="side-menu">
+				<li class="nav-header">
+					<div>
+						<span>
+							<img alt="image" class="img-circle" height="60" width="60" th:src="${pickUrl}">
+						</span>
+						<h3 style="color: #ffffff ">
+							<i>管理系统</i>
+						</h3>
+					</div>
 
-						<li class="treeview pointer" th:each="module : ${menuList}">
-							<a th:onclick="menuOnChange([[${module.menuUrl}]],[[${module.menuType}]]);">
-								<i class="fa fa-laptop"></i>
-								<span th:text="${module.menuName}"></span>
-								<i class="fa fa-angle-left pull-right"></i>
+					<div class="dropdown profile-element hidden">
+						<a data-toggle="dropdown" class="dropdown-toggle" href="#">
+							<span class="clear"></span>
+							<span class="block m-t-xs">
+								<strong class="font-bold" th:text="${user.userName}">admin</strong>
+							</span>
+							<span class="text-muted text-xs block">超级管理员<b class="caret"></b></span>
+						</a>
+						<ul class="dropdown-menu animated fadeInRight m-t-xs">
+							<li>
+								<a @click="personal" href="#">修改头像</a>
+							</li>
+							<li>
+								<a @click="personal" href="#">个人资料</a>
+							</li>
+							<li>
+								<a @click="personal" href="#">密码修改</a>
+							</li>
+							<li>
+								<a @click="personal" href="#">信箱</a>
+							</li>
+							<li class="divider">
+							</li>
+							<li>
+								<a href="/logout">安全退出</a>
+							</li>
+						</ul>
+						<div class="logo-element">
+							tao
+						</div>
+					</div>
+				</li>
+
+				<li>
+					<a href="#">
+						<i class="fa fa-home">
+							<span class="nav-label">主页</span>
+							<span class="fa arrow"></span>
+						</i>
+					</a>
+					<ul class="nav nav-second-level">
+						<li>
+							<a id="index001" class="J_menuItem" href="index.html" data-index="0" th:href="@{/main}">
+								了解tao
 							</a>
-							<ul class="treeview-menu">
-								<li th:each="subModule : ${module.subMenuList}">
-									<a th:onclick="menuOnChange([[${subModule.menuUrl}]],[[${subModule.menuType}]]);">
-										<i class="fa fa-angle-right"></i> <span th:text="${subModule.menuName}"></span>
+						</li>
+						<li th:each="menu:${menuList}">
+							<a href="#">
+								<i class="fa fa-bar-chart-o" th:class="${menu.menuIcon}"></i>
+								<span class="nav-label" th:text="${menu.menuName}">基础信息</span>
+								<span class="fa arrow"></span>
+							</a>
+							<ul class="nav nav-second-level">
+								<li th:each="subMenu:${menu.subMenuList}">
+									<a class="J_menuItem" href="#" th:text="${subMenu.menuName}" th:href="${subMenu.menuUrl}">
+										系统管理
 									</a>
 								</li>
 							</ul>
 						</li>
 					</ul>
-				</div>
-				<!-- /.navbar-collapse -->
-			</nav>
-		</aside>
-	</div>
-	<!--left-fixed -navigation-->
-
-	<!-- header-starts -->
-	<div class="sticky-header header-section ">
-		<div class="header-left">
-			<!--toggle button start-->
-			<button id="showLeftPush"><i class="fa fa-bars"></i></button>
-			<!--toggle button end-->
-			<!--<div class="profile_details_left">&lt;!&ndash;notifications of menu start &ndash;&gt;-->
-			<!--<ul class="nofitications-dropdown">-->
-			<!--<li class="dropdown head-dpdn">-->
-			<!--<a onclick="menuOnChange('message')" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-envelope"></i><span class="badge" id="messageCount"></span></a>-->
-			<!--</li>-->
-			<!--<li class="dropdown head-dpdn">-->
-			<!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-bell"></i><span class="badge blue">4</span></a>-->
-			<!--<ul class="dropdown-menu">-->
-			<!--<li>-->
-			<!--<div class="notification_header">-->
-			<!--<h3>You have 3 new notification</h3>-->
-			<!--</div>-->
-			<!--</li>-->
-			<!--<li><a href="#">-->
-			<!--<div class="user_img"><img src="images/4.jpg" alt=""></div>-->
-			<!--<div class="notification_desc">-->
-			<!--<p>Lorem ipsum dolor amet</p>-->
-			<!--<p><span>1 hour ago</span></p>-->
-			<!--</div>-->
-			<!--<div class="clearfix"></div>-->
-			<!--</a></li>-->
-			<!--<li class="odd"><a href="#">-->
-			<!--<div class="user_img"><img src="images/1.jpg" alt=""></div>-->
-			<!--<div class="notification_desc">-->
-			<!--<p>Lorem ipsum dolor amet </p>-->
-			<!--<p><span>1 hour ago</span></p>-->
-			<!--</div>-->
-			<!--<div class="clearfix"></div>-->
-			<!--</a></li>-->
-			<!--<li><a href="#">-->
-			<!--<div class="user_img"><img src="images/3.jpg" alt=""></div>-->
-			<!--<div class="notification_desc">-->
-			<!--<p>Lorem ipsum dolor amet </p>-->
-			<!--<p><span>1 hour ago</span></p>-->
-			<!--</div>-->
-			<!--<div class="clearfix"></div>-->
-			<!--</a></li>-->
-			<!--<li><a href="#">-->
-			<!--<div class="user_img"><img src="images/2.jpg" alt=""></div>-->
-			<!--<div class="notification_desc">-->
-			<!--<p>Lorem ipsum dolor amet </p>-->
-			<!--<p><span>1 hour ago</span></p>-->
-			<!--</div>-->
-			<!--<div class="clearfix"></div>-->
-			<!--</a></li>-->
-			<!--<li>-->
-			<!--<div class="notification_bottom">-->
-			<!--<a href="#">See all notifications</a>-->
-			<!--</div>-->
-			<!--</li>-->
-			<!--</ul>-->
-			<!--</li>-->
-			<!--<li class="dropdown head-dpdn">-->
-			<!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-tasks"></i><span class="badge blue1">8</span></a>-->
-			<!--<ul class="dropdown-menu">-->
-			<!--<li>-->
-			<!--<div class="notification_header">-->
-			<!--<h3>You have 8 pending task</h3>-->
-			<!--</div>-->
-			<!--</li>-->
-			<!--<li><a href="#">-->
-			<!--<div class="task-info">-->
-			<!--<span class="task-desc">Database update</span><span class="percentage">40%</span>-->
-			<!--<div class="clearfix"></div>-->
-			<!--</div>-->
-			<!--<div class="progress progress-striped active">-->
-			<!--<div class="bar yellow" style="width:40%;"></div>-->
-			<!--</div>-->
-			<!--</a></li>-->
-			<!--<li><a href="#">-->
-			<!--<div class="task-info">-->
-			<!--<span class="task-desc">Dashboard done</span><span class="percentage">90%</span>-->
-			<!--<div class="clearfix"></div>-->
-			<!--</div>-->
-			<!--<div class="progress progress-striped active">-->
-			<!--<div class="bar green" style="width:90%;"></div>-->
-			<!--</div>-->
-			<!--</a></li>-->
-			<!--<li><a href="#">-->
-			<!--<div class="task-info">-->
-			<!--<span class="task-desc">Mobile App</span><span class="percentage">33%</span>-->
-			<!--<div class="clearfix"></div>-->
-			<!--</div>-->
-			<!--<div class="progress progress-striped active">-->
-			<!--<div class="bar red" style="width: 33%;"></div>-->
-			<!--</div>-->
-			<!--</a></li>-->
-			<!--<li><a href="#">-->
-			<!--<div class="task-info">-->
-			<!--<span class="task-desc">Issues fixed</span><span class="percentage">80%</span>-->
-			<!--<div class="clearfix"></div>-->
-			<!--</div>-->
-			<!--<div class="progress progress-striped active">-->
-			<!--<div class="bar  blue" style="width: 80%;"></div>-->
-			<!--</div>-->
-			<!--</a></li>-->
-			<!--<li>-->
-			<!--<div class="notification_bottom">-->
-			<!--<a href="#">See all pending tasks</a>-->
-			<!--</div>-->
-			<!--</li>-->
-			<!--</ul>-->
-			<!--</li>-->
-			<!--</ul>-->
-			<!--<div class="clearfix"> </div>-->
-			<!--</div>-->
-			<!--notification menu end -->
-			<div class="clearfix"> </div>
+				</li>
+			</ul>
 		</div>
-		<div class="header-right">
-			<div class="profile_details">
-				<ul>
-					<li class="dropdown profile_details_drop">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-							<div class="profile_img">
-								<span class="prfil-img"><img src="images/2.jpg" alt=""> </span>
-								<div class="user-name">
-									<p th:text="${session.user.name}">Admin Name</p>
-								</div>
-								<i class="fa fa-angle-down lnr"></i>
-								<i class="fa fa-angle-up lnr"></i>
-								<div class="clearfix"></div>
-							</div>
+	</nav>
+	<!--左侧导航结束-->
+	<!--右侧部分开始-->
+	<div id="page-wrapper" class="gray-bg dashboard-1">
+		<div class="row border-bottom">
+			<nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
+				<div class="navbar-header">
+					<a class="navbar-minimalize minimalize-styl-2 btn btn-default" href="#" title="收起菜单">
+						<i class="fa fa-bars"></i>
+					</a>
+					<form role="search" class="navbar-form-custom" method="post" action="">
+						<div class="form-group">
+							<input type="text" placeholder="请输入要查找的内容" class="form-control" name="top-search" id="top-search">
+						</div>
+					</form>
+				</div>
+				<ul class="nav navbar-top-links navbar-right">
+					<li class="hidden-xs">
+						<a href="#" target="_blank">
+							<i class="fa fa-rss-square"></i>
+							博客
 						</a>
-						<ul class="dropdown-menu drp-mnu">
-							<li> <a href="/logout"><i class="fa fa-sign-out"></i> Logout</a> </li>
+					</li>
+					<li class="dropdown">
+						<a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
+							<i class="fa fa-envelope"></i>
+							<span class="label label-warning">{{total}}</span>
+						</a>
+						<ul class="dropdown-menu dropdown-messages">
+							<li v-for="row in rows" class="m-t-xs">
+								<div class="dropdown-messages-box">
+									<a class="pull-left">
+										<i class="fa fa-server"></i>
+									</a>
+									<div class="media-body">
+										<small class="pull-right">{{row.before}}</small>
+										<strong>{{row.sender}}</strong>
+										{{row.title}}<br>
+										<small class="text-muted">{{row.updateDate}}</small>
+									</div>
+								</div>
+								<div class="divider"></div>
+							</li>
+							<li>
+								<div class="text-center link-block">
+									<a class="J_menuItem" href="#">
+										<i class="fa fa-envelope"></i>
+										<strong>查看所有消息</strong>
+									</a>
+								</div>
+							</li>
 						</ul>
 					</li>
+					<li class="hidden-xs">
+						<a @click="personal" href="#" >
+							<i class="fa fa-id-card"></i> 个人
+						</a>
+					</li>
+					<li class="dropdown hidden-xs">
+						<a class="right-sidebar-toggle" aria-expanded="false">
+							<i class="fa fa-tasks"></i> 主题
+						</a>
+					</li>
 				</ul>
+			</nav>
+		</div>
+	</div>
+
+	<div class="row content-tabs" >
+		<button class="roll-nav roll-left J_tabLeft">
+			<i class="fa fa-backward"></i>
+		</button>
+		<nav class="page-tabs J_menuTabs">
+			<div class="page-tabs-content">
+				<a href="#" class="active J_menuTab" data-id="index.html">
+					首页
+				</a>
 			</div>
-			<div class="clearfix"> </div>
+		</nav>
+		<button class="roll-nav roll-right J_tabRight">
+			<i class="fa fa-forward"></i>
+		</button>
+		<div class="btn-group roll-nav roll-right">
+			<button class="dropdown J_tabClose" data-toggle="dropdown">
+				关闭操作<span class="caret"></span>
+			</button>
+			<ul role="menu" class="dropdown-menu dropdown-menu-right">
+				<li class="J_tabShowActive">
+					<a>定位当前选项卡</a>
+				</li>
+				<li class="divider"></li>
+				<li class="J_tabCloseAll">
+					<a>关闭全部选项卡</a>
+				</li>
+				<li class="J_tabCloseOther">
+					<a>关闭其他选项卡</a>
+				</li>
+			</ul>
 		</div>
-		<div class="clearfix bgColor"> </div>
+		<a href="/logout" class="roll-nav roll-right J_tabExit">
+			<i class="fa fa fa-sign-out"></i> 退出
+		</a>
 	</div>
-	<!-- //header-ends -->
-	<!-- main content start-->
-	<div id="page-wrapper" class="bgColor" >
-		<iframe onload="this.height=window.innerHeight*0.8" style="width: 100%;" src="" frameborder="0"></iframe>
+
+	<div class="row J_mainContent" id="content-main">
+		<iframe class="J_iframe" name="iframe0" width="100%" height="100%"
+				src="" th:src="@{/main}" frameborder="0" data-id="index.html"
+				seamless>
+
+		</iframe>
 	</div>
-	<!--footer start-->
-	<div id="mydiv" class="header-section bgColor" style="position: fixed;left: 0;bottom: 0;z-index:100;margin-left: 20px;margin-right: 120px;width:100%;height: 32px;line-height: 46px;">
-		<div id="readyCol" class="readyDiv" style="float:left;"><label href="" id="messageTool" style="color: #FEFEFE">准备就绪...</label></div>
-		<span id="webSocketStatus" style="margin-right:30px;float:right;text-align:center;font-size: 75%;font-weight: bold;color: #d9534f;" >未连接</span><label style="font-size:88%;float:right;color: #FEFEFE">网络状态:&nbsp;&nbsp;</label>
-		<div id = "statusDisplay" style="display: none;">
-			<span id="apamaStatus" style="margin-right:20px;float:right;text-align:center;font-size: 75%;font-weight: bold;color: #d9534f;" >未连接</span><label style="font-size:88%;float:right;color: #FEFEFE">交易系统:&nbsp;&nbsp;</label>
-			<!--<span id="dimpleJYStatus" style="margin-right:20px;float:right;text-align:center;font-size: 75%;font-weight: bold;color: #d9534f;" >未连接</span><label style="font-size:88%;float:right;">Dimple交易系统:</label>
-            <span id="dimpleHQStatus" style="margin-right:20px;float:right;text-align:center;font-size: 75%;font-weight: bold;color: #d9534f;" >未连接</span><label style="font-size:88%;float:right;">Dimple行情系统:</label>-->
-		</div>
+	<!--底部footer-->
+	<div class="footer">
+		<div class="pull-right">BootDo面向学习型的开源框架</div>
 	</div>
-	<!-- footer end-->
 </div>
-
-
+<!--右侧部分结束-->
+<!--右侧边栏开始-->
+<div id="right-sidebar">
+	<div class="sidebar-container">
+		<ul class="nav nav-tabs navs-3">
+			<li class="active">
+				<a data-toggle="tab" href="#tab-1">
+					<i class="fa fa-gear"></i> 主题
+				</a>
+			</li>
+			<li class="">
+				<a data-toggle="tab" href="#tab-2"> 通知 </a>
+			</li>
+			<li>
+				<a data-toggle="tab" href="#tab-3"> 项目进度 </a>
+			</li>
+		</ul>
+		<div class="tab-content">
+			<div id="tab-1" class="tab-pane active">
+				<div class="sidebar-title">
+					<h3>
+						<i class="fa fa-comments-o"></i> 主题设置
+					</h3>
+					<small>
+						<i class="fa fa-tim"></i>
+						你可以从这里选择和预览主题的布局和样式，这些设置会被保存在本地，下次打开的时候会直接应用这些设置。
+					</small>
+				</div>
+				<div class="skin-setttings">
+					<div class="title">主题设置</div>
+					<div class="setings-item">
+						<span>收起左侧菜单</span>
+						<div class="switch">
+							<div class="onoffswitch">
+								<input type="checkbox" name="collapsemenu" class="onoffswitch-checkbox" id="collapsemenu">
+								<label class="onoffswitch-label" for="collapsemenu">
+									<span class="onoffswitch-inner"></span>
+									<span class="onoffswitch-switch"></span>
+								</label>
+							</div>
+						</div>
+					</div>
+					<div class="setings-item">
+						<span>固定顶部</span>
+						<div class="switch">
+							<div class="onoffswitch">
+								<input type="checkbox" name="fixednavbar" class="onoffswitch-checkbox" id="fixednavbar">
+								<label class="onoffswitch-label" for="fixednavbar">
+									<span class="onoffswitch-inner"></span>
+									<span class="onoffswitch-switch"></span>
+								</label>
+							</div>
+						</div>
+					</div>
+					<div class="setings-item">
+						<span> 固定宽度 </span>
+						<div class="switch">
+							<div class="onoffswitch">
+								<input type="checkbox" name="boxedlayout" class="onoffswitch-checkbox" id="boxedlayout">
+								<label class="onoffswitch-label" for="boxedlayout">
+									<span class="onoffswitch-inner"></span>
+									<span class="onoffswitch-switch"></span>
+								</label>
+							</div>
+						</div>
+					</div>
+					<div class="title">皮肤选择</div>
+					<div class="setings-item default-skin nb">
+						<span class="skin-name ">
+							<a href="#" class="s-skin-0">
+								默认皮肤
+							</a>
+						</span>
+					</div>
+					<div class="setings-item blue-skin nb">
+						<span class="skin-name ">
+							<a href="#" class="s-skin-1">
+								蓝色主题
+							</a>
+						</span>
+					</div>
+					<div class="setings-item yellow-skin nb">
+						<span class="skin-name ">
+							<a href="#" class="s-skin-3">
+								黄色/紫色主题
+							</a>
+						</span>
+					</div>
+				</div>
+			</div>
+			<div id="tab-2" class="tab-pane">
+				<div class="sidebar-title">
+					<h3>
+						<i class="fa fa-comments-o"></i> 最新通知
+					</h3>
+					<small><i class="fa fa-tim"></i> 您当前有10条未读信息</small>
+				</div>
+			</div>
+			<div id="tab-3" class="tab-pane">
+				<div class="sidebar-title">
+					<h3>
+						<i class="fa fa-cube"></i> 最新任务
+					</h3>
+					<small><i class="fa fa-tim"></i> 您当前有14个任务，10个已完成</small>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 </body>
 </html>
