--- a/src/main/resources/templates/role/roleAdd.html
+++ b/src/main/resources/templates/role/roleAdd.html
@@ -1,10 +1,98 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+<html xmlns:th="http://www.thymeleaf.org">
+<!--引用通用head--->
+<head th:replace="common/commonHeader::common_header(~{::title},~{::link},~{})">
+    <title>角色配置</title>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrapvalidator/css/bootstrapValidator.min.css}"/>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap-glyphicons/css/bootstrap-glyphicons.css}"/>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap-datepicker/css/bootstrap-datepicker3.css}"/>
 </head>
 <body>
-$END$
+<!--引用通用JS-->
+<div th:replace="common/commonFoot::foot(~{::script})">
+    <script th:src="@{/webjars/bootstrapvalidator/js/bootstrapValidator.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap-datepicker/js/bootstrap-datepicker.min.js}"></script>
+    <script th:src="@{/webjars/jquery-validation/jquery.validate.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap-datepicker/locales/bootstrap-datepicker.zh-CN.min.js}"></script>
+    <script th:src="@{/js/role.js}"></script>
+</div>
+<div class="container-fluid panel-body">
+    <form class="form-horizontal validation-form" id="formAdd" action="#" th:action="@{/role/roleAdd}" method="post">
+        <input type="hidden" name="roleId" th:value="${role.roleId}">
+        <div class="panel panel-default" style="margin-bottom: 0px;">
+            <h4 class="panel panel-heading h4font">
+                角色配置
+                <small>
+                    (*星号是必填项)
+                </small>
+            </h4>
+            <div class="panel-body">
+                <div class="form-group">
+                    <label class="col-sm-1 control-label">
+                        <span style="color:red;font-weight:bold">角色英文名</span>
+                    </label>
+                    <div class="col-sm-4">
+                        <input type="text" class="form-control" name="role" placeholder="角色英文名" th:value="${role.role}">
+                    </div>
+                    <label class="control-label">（最长16位）</label>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-sm-1 control-label">
+                        <span style="color:red;font-weight:bold">角色中文名</span>
+                    </label>
+                    <div class="col-sm-4">
+                        <input type="text" class="form-control" name="roleName" placeholder="角色中文名" th:value="${role.roleName}">
+                    </div>
+                    <label class="control-label">（最长16位）</label>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-sm-1 control-label">角色描述</label>
+                    <div class="col-sm-4">
+                        <input type="text" class="form-control" name="description" placeholder="描述" th:value="${role.description}">
+                    </div>
+                    <label class="control-label">（简单描述角色的使用范围和作用）</label>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-sm-1 control-label"><span style="color: red;font-weight: bold">＊</span>状态</label>
+
+                    <div class="col-sm-11">
+                        <label class="radio-inline">
+                            <input type="radio" value="true" checked  name="available"  th:checked="${role.available}">正常
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" value="false"  name="available" th:checked="${!role.available}">禁用
+                        </label>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-sm-1 control-label">创建时间</label>
+                    <div class="col-sm-4">
+                        <input type="text" readonly class="form-control" name="createTime" placeholder=""
+                               th:value="${#temporals.format(role.createDate, 'yyyy-MM-dd HH:mm:ss')}">
+                    </div>
+                    <label class="control-label">（系统自动生成）</label>
+                </div>
+
+            </div>
+
+            <div class="form-group">
+                <div class="col-sm-offset-5 col-sm-1">
+                    <button type="submit" class="btn btn-primary">保 存</button>
+                </div>
+
+                <div class="col-sm-1">
+                    <a name="backToRoleList" href="javascript:void(0)" th:href="@{/role/index}" class="btn btn-primary">返 回</a>
+                </div>
+            </div>
+        </div>
+
+
+    </form>
+
+</div>
 </body>
 </html>
