--- a/src/main/resources/templates/role/roleList.html
+++ b/src/main/resources/templates/role/roleList.html
@@ -1,10 +1,283 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+<html xmlns:th="http://www.thymeleaf.org">
+<!--引用通用head--->
+<head th:replace="common/commonHeader::common_header(~{::title},~{::link},~{})">
+    <title>角色管理</title>
+    <link rel="stylesheet" th:href="@{/webjars/datatables/css/jquery.dataTables.css}"/>
+    <link rel="stylesheet" th:href="@{/webjars/datatables/css/dataTables.bootstrap.min.css}"/>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap-table/bootstrap-table.min.css}"/>
 </head>
 <body>
-$END$
+<!--引用通用JS-->
+<div th:replace="common/commonFoot::foot(~{::script})">
+    <script th:src="@{/webjars/datatables/js/jquery.dataTables.min.js}" ></script>
+    <script th:src="@{/webjars/bootstrap-table/bootstrap-table.min.js}" ></script>
+    <script th:src="@{/webjars/bootstrap-table/locale/bootstrap-table-zh-CN.min.js}" ></script>
+    <script th:src="@{/js/common.js}" ></script>
+<!--    <script th:src="@{/js/role.js}" ></script>-->
+</div>
+<div class="panel-body" style="padding-bottom: 0px">
+    <!--查询-->
+    <div class="panel panel-default" style="margin-bottom: 2px">
+        <div class="form-inline">
+            <div class="form-group">
+                <label for="search">角色名称</label>
+                <input type="text" name="roleName" id="search" placeholder="角色名称">
+                <input type="button" id="btnQuery" class="btn btn-primary" value="查询">
+            </div>
+        </div>
+    </div>
+    <!--工具栏-->
+    <div id="toolbar" class="btn-group">
+        <button id="btn_add" type="button" class="btn btn-default">
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增
+        </button>
+        <button id="btn_edit" type="button" class="btn btn-default">
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>修改
+        </button>
+        <button id="btn_delete_tip" type="button" class="btn btn-default" data-target="#deleteModal" data-toggle="modal">
+            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>删除
+        </button>
+        <button id="btn_detail" type="button" class="btn btn-default">
+            <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>详情
+        </button>
+        <button id="btn_authority" type="button" class="btn btn-default">
+            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>权限
+        </button>
+    </div>
+    <!--删除模态框-->
+    <div class="modal fade" id="deleteModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">$times;</span>
+                    </button>
+                    <h3 class="modal-title">删除提示</h3>
+                </div>
+                <div class="modal-body">
+                    <p>确认删除选中数据？</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" id="btn_delete">确认</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <!--table数据显示-->
+    <table id="roleTable">
+
+    </table>
+
+</div>
 </body>
+<script type="text/javascript">
+    var $roleTable=$("#roleTable");
+    $(function () {
+        //初始化bootstrap table
+        initTable();
+        //添加off("click")避免点击一次触发两次情况
+        $('#btn_edit').off("click").on("click",function () {
+            edit();
+        });
+        $('#btnQuery').off("click").on("click",function () {
+            refresh();
+        });
+        $('#btn_add').off("click").on("click",function () {
+            add();
+        });
+        $('#btn_delete').off("click").on("click",function () {
+            toDelete();
+        });
+        $('#btn_authority').off("click").on("click",function () {
+            authority();
+        });
+    });
+
+
+    function initTable() {
+        $roleTable.bootstrapTable({
+            url:"/role/page",
+            cache: false,                       //是否使用缓存，默认为true，所以一般情况下需要设置一下这个属性（*）
+            method: 'post',
+            contentType : "application/x-www-form-urlencoded;charset=UTF-8", //post方式必须设置,get方式设置application/json
+            dataType: 'json',
+            striped: true,                      //是否显示行间隔色
+            toolbar: '#toolbar',                //工具按钮用哪个容器
+            sidePagination: 'server',           //分页方式：client客户端分页，server服务端分页（*）
+            pagination: true,                   //是否显示分页（*）
+            pageNumber: 1,                      //初始化加载第一页，默认第一页
+            pageSize: 10,                        //每页的记录行数（*）
+            pageList: [10, 25, 50],          //可供选择的每页的行数（*）
+//            search: true,                       //是否显示表格搜索，此搜索是客户端搜索，不会进服务端，所以，个人感觉意义不大
+            showColumns: true,                  //是否显示所有的列（选择显示的列）
+            minimumCountColumns: 2,             //最少允许的列数
+            showRefresh: true,                  //是否显示刷新按钮
+            clickToSelect: true,                //是否启用点击选中行
+//            showToggle:true,                    //是否显示详细视图和列表视图的切换按钮
+            sortable: true,                     //是否启用排序
+            sortOrder: "desc",                   //排序方式
+            sortName: 'createTime',             //排序字段
+            cardView: false,                    //是否显示详细视图
+            detailView: false,                  //是否显示父子表
+            idField: 'roleId',                  //id
+            showExport: true,                     //是否显示导出
+            exportDataType: "selected",              //basic', 'all', 'selected'.
+            exportTypes: ['txt','csv', 'excel','xlsx'],
+            exportOptions:{
+                //ignoreColumn: [0,0],            //忽略某一列的索引
+                fileName: '数据导出',              //文件名称设置
+                worksheetName: 'Sheet1',          //表格工作区名称
+                tableName: '角色列表',
+                excelstyles: ['background-color', 'color', 'font-size', 'font-weight'],
+                //onMsoNumberFormat: DoOnMsoNumberFormat
+            },
+            buttonsAlign:"right",  //按钮位置
+            columns: [
+                {
+                    field:'selected',
+                    checkbox: true,
+                    formatter: function (value, row, index) {
+                        if (row.role == 'admin')
+                            return {
+                                disabled:true,
+                                checked: false//设置选中
+                            };
+                        return value;
+                    }
+                }, {
+                    field:'role',
+                    title: '角色代码',
+                    align: 'center',
+                    sortable: true
+                }, {
+                    field: 'roleName',
+                    title: '角色名称',
+                    sortable: true
+                }, {
+                    field: 'description',
+                    title: '角色描述'
+                }, {
+                    field: 'createDate',
+                    title: '创建时间',
+                    sortable: true
+                },  {
+                    field: 'available',
+                    title: '状态',
+                    sortable: true,
+                    formatter:function (value,row,index) {
+                        if(row.role=='admin') return "锁定";
+                        if(value) return "正常";
+                        else return "禁用";
+                    }
+                }
+            ],
+            queryParamsType: '',
+            queryParams: function (params) {
+                console.log("queryParams---"+params)
+                //这里的键的名字和控制器的变量名必须一致，这边改动，控制器也需要改成一样的
+                var temp = {
+                    limit : params.limit, // 每页显示数量
+                    offset :params.offset,
+                    page: (params.offset / params.limit) + 1,   //当前页码
+                    sortName: params.sortName,      //排序列名
+                    sortOrder: params.sortOrder,  //排位命令（desc，asc）
+                    searchText: $('#search').val()
+                };
+                return temp;
+            },
+            responseHandler:function(result){
+                return {
+                    "total":result.recordsTotal,
+                    "rows":result.data
+                };
+            },
+            rowStyle: function (row, index) {
+                //这里有5个取值代表5中颜色['active', 'success', 'info', 'warning', 'danger'];
+                var strclass = "";
+                if (row.role == "admin") {
+                    strclass = 'danger';//
+                }
+                else {
+                    return {};
+                }
+                return { classes: strclass }
+            },
+            onLoadSuccess: function (result) {
+                console.log("数据加载成功！"+result);
+            },
+            onLoadError: function () {
+                console.log("数据加载失败！");
+            },
+            onDblClickRow: function (row, $element) {
+            }
+        });
+    }
+
+    //编辑
+    function edit() {
+        toastr.info("编辑");
+        var selectedLine = $roleTable.bootstrapTable('getSelections');
+        if (selectedLine.length < 1) {
+            toastr.warning("请选中一行数据");
+        }
+        else {
+            var idList = selectedLine[0].roleId;
+            console.log(idList);
+            var url = "/role/edit/"+idList;
+            $('#container').load(url);
+        }
+    }
+    //刷新
+    function refresh() {
+        $roleTable.bootstrapTable('refresh');
+    }
+    //新增
+    function add() {
+        var url = "/role/roleAdd";
+        $('#container').load(url);
+    }
+    //删除
+    function toDelete(){
+        var selectedLine = $roleTable.bootstrapTable('getSelections');
+        if (selectedLine.length < 1) {
+            toastr.warning("请选中一行数据");
+        }
+        else {
+            var idList = selectedLine[0].roleId;
+            for (var i = 1; i < selectedLine.length; i++) {
+                idList += ','+ selectedLine[i].roleId;
+            }
+            var deleteUrl = "/role/delete";
+            $.ajax({
+                type:"post",
+                url:deleteUrl,
+                data:{roleIdList:idList},
+                dataType:"json",
+                success:function (result) {
+                    $('#container').load(result.url);
+                    $('.modal-backdrop').remove();//移除遮罩
+                    $("body").removeClass('modal-open'); //移除模态
+                },
+                error:function (result) {
+                    toastr.warning("删除失败！");
+                }
+            });
+        }
+    }
+    //角色
+    function authority() {
+        var selectedLine = $roleTable.bootstrapTable('getSelections');
+        if (selectedLine.length < 1) {
+            toastr.warning("请选中一行数据");
+        }
+        else {
+            var idList = selectedLine[0].roleId;
+            var url = "/role/plist/"+idList;
+            $('#container').load(url);
+        }
+    }
+</script>
 </html>
