对系统js目录的调整，增加websocket功能

--- a/src/main/resources/templates/common/commonFoot.html
+++ b/src/main/resources/templates/common/commonFoot.html
@@ -5,6 +5,10 @@
     <script th:src="@{/webjars/jquery/jquery.min.js}" ></script>
     <!-- 引入jquery form插件JS -->
     <script th:src="@{/webjars/jquery-form/jquery.form.min.js}" ></script>
+    <!-- 引入popper插件样式 JS-->
+    <script th:src="@{/webjars/jQuery-slimScroll/jquery.slimscroll.min.js}"></script>
+    <!-- 引入popper插件样式 JS umd--Universal Module Definition统一的模块定义,同时支持浏览器和服务端-->
+    <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
     <!-- 引入bootstrap插件样式 JS-->
     <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
     <!-- 引入bootstrap验证插件样式 JS-->
