--- a/src/main/resources/templates/dept/deptAdd.html
+++ b/src/main/resources/templates/dept/deptAdd.html
@@ -12,7 +12,7 @@
 <div th:replace="common/commonFoot::foot(~{::script})">
     <script th:src="@{/webjars/bootstrapvalidator/js/bootstrapValidator.min.js}"></script>
     <script th:src="@{/webjars/jquery-validation/jquery.validate.min.js}"></script>
-    <script th:src="@{/js/dept.js}"></script>
+    <script th:src="@{/js/sys/dept/dept.js}"></script>
 </div>
 <div class="container-fluid panel-body">
     <form id="deptForm" class="form-horizontal validation-form" action="/dept/save" method="post">
