--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
 	<script th:src="@{/webjars/jquery-validation/jquery.validate.min.js}"></script>
 	<script th:src="@{/webjars/cryptojs/components/core-min.js}"></script>
 	<script th:src="@{/webjars/cryptojs/components/md5-min.js}"></script>
-	<script th:src="@{/js/login.js}"></script>
+	<script th:src="@{/js/sys/login.js}"></script>
 	<script>
 		if (window.top !== window.self) {
 			window.top.location = window.location;
