--- a/src/main/resources/templates/role/roleAdd.html
+++ b/src/main/resources/templates/role/roleAdd.html
@@ -14,7 +14,7 @@
     <script th:src="@{/webjars/bootstrap-datepicker/js/bootstrap-datepicker.min.js}"></script>
     <script th:src="@{/webjars/jquery-validation/jquery.validate.min.js}"></script>
     <script th:src="@{/webjars/bootstrap-datepicker/locales/bootstrap-datepicker.zh-CN.min.js}"></script>
-    <script th:src="@{/js/role.js}"></script>
+    <script th:src="@{/js/sys/role/role.js}"></script>
 </div>
 <div class="container-fluid panel-body">
     <form class="form-horizontal validation-form" id="formAdd" action="#" th:action="@{/role/roleAdd}" method="post">
