弹出框改为layui.layer方式弹出

--- a/src/main/resources/templates/common/commonFoot.html
+++ b/src/main/resources/templates/common/commonFoot.html
@@ -13,6 +13,9 @@
     <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
     <!-- 引入bootstrap验证插件样式 JS-->
     <script th:src="@{/webjars/bootstrapvalidator/js/bootstrapValidator.min.js}"></script>
+    <!-- 引入layui layer弹出层样式 JS-->
+    <script th:src="@{/webjars/layui/layui.js}"></script>
+<!--    <script th:src="@{/webjars/layui/lay/modules/layer.js}"></script>-->
     <!-- 消息提醒框JS -->
     <script th:src="@{/webjars/toastr/build/toastr.min.js}" ></script>
     <!-- 引入支持多种浏览器的JS -->
