--- a/src/main/resources/templates/common/commonHeader.html
+++ b/src/main/resources/templates/common/commonHeader.html
@@ -14,6 +14,8 @@
     <!-- 引入bootstrap验证插件样式 -->
     <link rel="stylesheet" th:href="@{/webjars/bootstrapvalidator/css/bootstrapValidator.min.css}"/>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap-glyphicons/css/bootstrap-glyphicons.css}"/>
+    <!--layui css -->
+    <link rel="stylesheet" th:href="@{/webjars/layui/css/layui.css}"/>
     <!-- 消息提醒框样式 -->
     <link rel="stylesheet" th:href="@{/webjars/toastr/build/toastr.min.css}"/>
     <!--/* Per-page placeholder for additional links */-->
