--- a/src/main/resources/templates/user/userAdd.html
+++ b/src/main/resources/templates/user/userAdd.html
@@ -11,7 +11,7 @@
         <script th:src="@{/webjars/bootstrap-datepicker/js/bootstrap-datepicker.min.js}"></script>
         <script th:src="@{/webjars/jquery-validation/jquery.validate.min.js}"></script>
         <script th:src="@{/webjars/bootstrap-datepicker/locales/bootstrap-datepicker.zh-CN.min.js}"></script>
-        <script th:src="@{/webjars/cryptojs/components/md5-min.js}"></script>
+<!--        <script th:src="@{/webjars/cryptojs/components/md5-min.js}"></script>-->
         <script th:src="@{/js/common.js}"></script>
         <script th:src="@{/js/sys/user/user.js}"></script>
     </div>
@@ -29,6 +29,13 @@
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="userName" name="userName" placeholder="请输入用户名"
                                th:value="${user.userName}" th:th:readonly="${readOnly}"  required>
+                    </div>
+                </div>
+                <div class="form-inline">
+                    <label for="pickUrl" class="col-sm-2 control-label"style="white-space:nowrap">头像</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="pickUrl" name="pickUrl" placeholder="请输入用户名"
+                               th:value="${user.pickUrl}" th:th:readonly="${readOnly}"  required>
                     </div>
                 </div>
                 <div class="form-inline">
