--- a/src/main/resources/templates/user/userPasswordReset.html
+++ b/src/main/resources/templates/user/userPasswordReset.html
@@ -11,14 +11,15 @@
         <script th:src="@{/webjars/bootstrap-datepicker/js/bootstrap-datepicker.min.js}"></script>
         <script th:src="@{/webjars/jquery-validation/jquery.validate.min.js}"></script>
         <script th:src="@{/webjars/bootstrap-datepicker/locales/bootstrap-datepicker.zh-CN.min.js}"></script>
-        <script th:src="@{/webjars/cryptojs/components/md5-min.js}"></script>
         <script th:src="@{/js/common.js}"></script>
         <script type="text/javascript">
             $(function () {
                 /**监听按钮*/
                 validateRule();
                 /**监听按钮*/
-                $("#reset").click=update();
+                $("#reset").click(function () {
+                    update();
+                });
                 $("body").keydown(keyDownLogon);
             });
 
@@ -100,7 +101,7 @@
         </script>
     </div>
     <div class="container-fluid panel-body">
-        <form id="userResetForm" class="form-horizontal validation-form" action="/user/modifyPassword" method="post">
+        <form id="userResetForm" class="form-horizontal validation-form" action="#" method="post" onsubmit="false">
             <input type="hidden" name="userId" id="userId" th:value="${user.userId}">
             <div class="panel-body">
                 <div class="form-group">
@@ -119,12 +120,13 @@
                     <label for="passwordConfirm" class="col-sm-2 control-label"style="white-space:nowrap">确认密码</label>
                     <div class="col-sm-10">
                         <input type="password" class="form-control" id="passwordConfirm" name="passwordConfirm"
-                               th:value="${user.password}" th:readonly="${readOnly}"  placehold er="请确认密码">
+                               placehold er="请确认密码">
                     </div>
                 </div>
             </div>
             <div class="form-inline">
-                <button type="button" id="reset" name="reset" class="btn btn-primary" data-loading-text="提交中...">返回</button>
+                <button type="button" id="reset" name="reset" class="btn btn-primary" data-loading-text="提交中...">保存</button>
+                <button type="button" name="close" onclick="windowClose()" class="btn btn-secondary">关闭</button>
             </div>
         </form>
     </div>
