菜单管理js错误导致无法保存问题

--- a/src/main/resources/templates/menu/menuForm.html
+++ b/src/main/resources/templates/menu/menuForm.html
@@ -15,7 +15,7 @@
     </div>
     <div class="container-fluid panel-body" style="padding-bottom:0px">
         <div class="panel-body">
-            <form id="menuForm" class="form-horizontal validation-form">
+            <form id="menuForm" class="form-horizontal">
 
                 <div class="form-inline">
                     <input type="hidden" id="parentId" name="parentId" th:value="${menu.parentId}">
