--- a/src/main/resources/templates/menu/menuList.html
+++ b/src/main/resources/templates/menu/menuList.html
@@ -17,7 +17,7 @@
                 菜单管理
             </h3>
             <div class="row">
-                <button class="btn-primary" onclick="toAdd()">新增</button>
+                <button class="btn btn-primary" onclick="toAdd()">新增</button>
             </div>
         </div>
         <div class="panel-body">
